--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,7 +5,7 @@
       <li><a href="#hero"><box-icon name='home-alt' class="home-nav"></box-icon></a></li>
       <li><a href="#projects"><box-icon type='solid' name='package' class="projects-nav"></box-icon></a></li>
       <li><a href="#work"><box-icon name='briefcase-alt-2' class="briefcase-nav"></box-icon></a></li>
-      <li><a href="#"><box-icon name='wrench' class="wrench-nav"></box-icon></a></li>
+      <li><a href="#tools"><box-icon name='wrench' class="wrench-nav"></box-icon></a></li>
     </ul>
   </div>
 </nav>
@@ -102,4 +102,13 @@
       </app-work-card>
     }
   </div>
+</section>
+
+<section class="skills-and-tools" id="tools">
+  <h1 class="skills-title">SKILLS &</h1>
+  <h1 class="skills-title2">TOOLS</h1>
+  <h2 class="skills-desc">Some cool stuff i’ve learned :)</h2>
+
+
+
 </section>
