skills styling started

--- a/src/app/components/skills-row/skills-row.html
+++ b/src/app/components/skills-row/skills-row.html
@@ -3,14 +3,14 @@
   <div class="skills-marquee">
     @for (tech of technologies; track tech.name) {
       <div class="tech-item">
-        <i class="bx bxl-{{ tech.icon }}"></i>
+        <img src="./skills/{{ tech.icon }}.png" alt="{{ tech.icon }}">
         <span>{{ tech.name }}</span>
       </div>
     }
 
     @for (tech of technologies; track tech.name) {
       <div class="tech-item">
-        <i class="bx bxl-{{ tech.icon }}"></i>
+        <img src="./skills/{{ tech.icon }}.png" alt="{{ tech.icon }}">
         <span>{{ tech.name }}</span>
       </div>
     }
