--- a/src/app/components/skills-row/skills-row.css
+++ b/src/app/components/skills-row/skills-row.css
@@ -54,9 +54,17 @@
     );
 }
 
-.tech-item i {
-    color: white;
-    font-size: 60px;
+.tech-item:hover {
+    border: 1px solid rgba(97, 97, 97, 0.534);
+    border-radius: 10px;
+    padding: 15px;
+    width: 400px;
+    gap: 5px;
+    background: black;
+}
+
+.tech-item img {
+    height: 60px;
 }
 
 .tech-item span {
