--- a/src/app/app.css
+++ b/src/app/app.css
@@ -2,7 +2,10 @@
 .navbar {
     height: 90px;
     width: 100%;
-    background-color: rgba(4, 4, 4, 0.645);
+    background: linear-gradient(
+        180deg, 
+        rgba(4, 4, 4, 0.462) 40%, 
+        rgba(0, 0, 0, 0.541) 100%);
     position: fixed;
     z-index: 10;
 }
@@ -19,7 +22,11 @@
 
 .logo {
     position: absolute;
-    padding: 35px;
+    padding: 15px;
+}
+
+.logo img {
+    height: 65px;
 }
 
 .nav-links {
@@ -525,8 +532,8 @@ li, ul {
     );
     margin: 0;
     padding: 120px;
-    padding-left: 150px;
-    padding-right: 150px;
+    padding-left: 200px;
+    padding-right: 200px;
 }
 
 .skills-title {
