--- a/src/app/app.html
+++ b/src/app/app.html
@@ -109,6 +109,6 @@
   <h1 class="skills-title2">TOOLS</h1>
   <h2 class="skills-desc">Some cool stuff i’ve learned :)</h2>
 
-  
+  <app-skills-section [skillsData]="skillsData"></app-skills-section>
 
 </section>
