skills styling completed

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -102,6 +102,7 @@
       </app-work-card>
     }
   </div>
+  <div class="white-line"></div>
 </section>
 
 <section class="skills-and-tools" id="tools">
