--- a/src/app/app.css
+++ b/src/app/app.css
@@ -410,13 +410,13 @@ li, ul {
     background: linear-gradient(
         90deg, 
         rgba(255, 255, 255, 0) 0%, 
-        rgba(255, 255, 255, 0.781) 50%,
+        rgba(255, 255, 255, 0.822) 50%,
         rgba(255, 255, 255, 0) 100%
     );
     display: flex;
     justify-self: center;
     align-self: center;
-    height: 1px;
+    height: 0.3px;
     width: 800px;
     margin: 0;
     padding: 0;
@@ -528,7 +528,7 @@ li, ul {
     background: linear-gradient(
         180deg, 
         #030303 0%, 
-        #121212 100%
+        #141414b5 100%
     );
     margin: 0;
     padding: 120px;
@@ -564,4 +564,21 @@ li, ul {
     font-family: 'JetBrains Mono', Courier, monospace;
     font-size: 22px;
     font-weight: 400;
+}
+
+.blurred-circle-skills {
+    width: 1550px;
+    height: 300px;
+    background: linear-gradient(
+        100deg, 
+        var(--orange-site) 0%, 
+        #2436FF 100%);
+    border-radius: 50%;
+    filter: blur(220px);
+    position: absolute;
+    left: 10%;
+    top: 50%;
+    opacity: 40%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
 }
