--- a/src/app/app.html
+++ b/src/app/app.html
@@ -44,6 +44,7 @@
         </div>
       </div>
   </div>
+  <div class="white-line"></div>
 </section>
 
 
@@ -106,10 +107,13 @@
 </section>
 
 <section class="skills-and-tools" id="tools">
+  <div class="blurred-circle-skills"></div>
   <h1 class="skills-title">SKILLS &</h1>
   <h1 class="skills-title2">TOOLS</h1>
   <h2 class="skills-desc">Some cool stuff i’ve learned :)</h2>
+  
 
   <app-skills-section [skillsData]="skillsData"></app-skills-section>
-
+  
+  
 </section>
