--- a/src/app/components/skills-section/skills-section.css
+++ b/src/app/components/skills-section/skills-section.css
@@ -1,3 +1,7 @@
+* {
+    z-index: 2;
+}
+
 .skills-parent-wrapper {
     display: flex;
     flex-direction: column;
@@ -11,7 +15,7 @@
 }
 
 .skills-tab-button {
-    background: #131313;
+    background: #1313137b;
     border: 1px solid rgba(92, 92, 92, 0.54);
     border-radius: 15px 15px 0px 0px;
     padding: 14px 30px 14px 30px;
@@ -29,11 +33,10 @@
 }
 
 .skills-section-wrapper {
-    background: linear-gradient(
-        180deg,
-        #000000 0%,
-        #0F1013 100%
-    );
+    
+    background-color: #080a107c;
+    backdrop-filter: blur(10px); 
+    -webkit-backdrop-filter: blur(10px);
     border: 1px solid rgba(92, 92, 92, 0.54);
     border-radius: 15px;
     padding: 0;
@@ -100,18 +103,18 @@
     font-family: 'Plus Jakarta Sans', sans-serif;
     font-size: 16px;
     font-weight: 500;
-    padding: 10px 20px;
+    padding: 13px 25px;
     cursor: pointer;
     transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 }
 
 .skill-item.selected {
     background: linear-gradient(
-        200deg,
-        #ffe0c8 0%,
-        rgb(217, 206, 255) 100%
+        100deg,
+        #ffe3d1 0%,
+        rgb(187, 168, 255) 100%
     );
-    border: 1px solid #727272; 
+    border: 1px solid #ffffff00; 
     color: black;
 }
 
@@ -121,7 +124,7 @@
 
 /* Contenedor del texto de la descripción */
 .skills-description-text {
-    color: #999999; /* Color de texto de la descripción */
+    color: #cecece; /* Color de texto de la descripción */
     font-family: 'Plus Jakarta Sans', sans-serif;
     font-size: 15px;
     line-height: 1.6;
