--- a/src/app/components/project-card/project-card.html
+++ b/src/app/components/project-card/project-card.html
@@ -12,5 +12,9 @@
             </div>
         }
         </div>
-        <a class="see-repo"><i class='bx bx-link-external'></i></a>
+        <div class="see-repo">
+            <a [href]="repoUrl" target="_blank">
+                <i class='bx bx-link-external'></i>
+            </a>
+        </div>
 </div>
